--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=discovery-service
+
+eureka.instance.hostname=localhost
+server.port=8010
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
