--- a/offer-provider-service/pom.xml
+++ b/offer-provider-service/pom.xml
@@ -11,8 +11,8 @@
     <groupId>org.microarchitecturovisco</groupId>
     <artifactId>offer-provider-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>offer-provider</name>
-    <description>offer-provider</description>
+    <name>offer-provider-service</name>
+    <description>offer-provider-service</description>
     <properties>
         <java.version>21</java.version>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
