--- a/transport-service/pom.xml
+++ b/transport-service/pom.xml
@@ -11,8 +11,8 @@
     <groupId>org.microarchitecturovisco</groupId>
     <artifactId>transport-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>transport</name>
-    <description>transport</description>
+    <name>transport-service</name>
+    <description>transport-service</description>
     <properties>
         <java.version>21</java.version>
         <spring-cloud.version>2023.0.0</spring-cloud.version>
