--- a/transport-service/src/main/resources/application.properties
+++ b/transport-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.application.name=transport
+spring.application.name=transport-service
+
+server.port=0
+
+eureka.client.service-url.defaultZone=http://localhost:8010/eureka
+
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:transport-db
