RSWW-29 added rabbitmq dependencies to project

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -33,3 +33,8 @@ spring.cloud.gateway.routes[5].id=payment-service
 spring.cloud.gateway.routes[5].uri=lb://payment-service
 spring.cloud.gateway.routes[5].predicates[0]=Path=/payments/**
 spring.cloud.gateway.routes[5].filters[0]=RemoveRequestHeader=Cookie
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
