--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -5,3 +5,8 @@ server.port=8010
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
