--- a/hotel-service/src/main/resources/application.properties
+++ b/hotel-service/src/main/resources/application.properties
@@ -9,3 +9,8 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:hotel-db
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
