RSWW-30 services: change application properties to use docker host network
Signed-off-by: Paweł Cichowski <pcichowski@pcichowski.com>

--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=discovery-service
 
-eureka.instance.hostname=localhost
+eureka.instance.hostname=discovery
 server.port=8010
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.server.maxThreadsForPeerReplication=0
