--- a/reservation-service/src/main/resources/application.properties
+++ b/reservation-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=reservation-service
 
 server.port=0
 
-eureka.client.service-url.defaultZone=http://localhost:8010/eureka
+eureka.client.service-url.defaultZone=http://discovery:8010/eureka
 
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
