RSWW-36 .github: rename CI workflows to reflect service names
Signed-off-by: Paweł Cichowski <pcichowski@pcichowski.com>

--- a/.github/workflows/test-transport-service.yml
+++ b/.github/workflows/test-transport-service.yml
@@ -1,4 +1,4 @@
-name: Travel API CI
+name: Travel API CI - Transport service
 
 on:
   push:
@@ -14,6 +14,7 @@ permissions: write-all
 
 jobs:
   test:
+    name: Package and execute tests
     runs-on: ubuntu-latest
     if: always()
 
