--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -10,7 +10,7 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://localhost:5432/users?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&currentSchema=public
-spring.datasource.url=jdbc:postgresql://localhost:5432/users
+spring.datasource.url=jdbc:postgresql://userdb:5432/users
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.show-sql=true
