updated databases configuration

--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -2,16 +2,10 @@ spring.application.name=payment-service
 
 server.port=0
 
-eureka.client.service-url.defaultZone=http://discovery:8020/eureka
+eureka.client.service-url.defaultZone=http://discovery:8010/eureka
 
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/payments?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&currentSchema=public
-spring.datasource.username=postgres
-spring.datasource.password=password
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.default_schema = public
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:payment-db
