--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,12 +81,12 @@ services:
   user:
       build: ./user-service
       depends_on:
+        - rabbitmq
         - discovery
+        - gateway
         - userdb
       networks:
         - backend
-      ports:
-        - 8082:8082
 
   userdb:
     image: postgres
@@ -94,8 +94,8 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=users
-    ports:
-      - 5432:5432
+    expose:
+      - "5432"
     restart: always
     volumes:
       - ./db:/var/lib/postgres
