--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,23 @@ services:
       - gateway
     networks:
       - backend
+    # ports - debug only
+    ports:
+      - "8082:8082"
+
+  hoteldb:
+    image: postgres
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=users
+    expose:
+      - "5432"
+    restart: always
+    volumes:
+      - ./hotel_db:/var/lib/postgres
+    networks:
+      - backend
 
   offer-provider:
     build: ./offer-provider-service
@@ -98,9 +115,13 @@ services:
       - "5432"
     restart: always
     volumes:
-      - ./db:/var/lib/postgres
+      - ./user_db:/var/lib/postgres
     networks:
       - backend
 
 networks:
   backend:
+
+volumes:
+  hotel_db:
+  user_db:
