--- a/hotel-service/src/main/resources/application.properties
+++ b/hotel-service/src/main/resources/application.properties
@@ -1,11 +1,18 @@
 spring.application.name=hotel-service
 
-server.port=0
+server.port=8082
 
 eureka.client.service-url.defaultZone=http://discovery:8010/eureka
 
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:hotel-db
+spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/users?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&currentSchema=public
+spring.datasource.url=jdbc:postgresql://hoteldb:5432/hotels
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema = public
