--- a/docker-compose-database.yml
+++ b/docker-compose-database.yml
@@ -42,9 +42,31 @@ services:
       timeout: 5s
       retries: 20
 
+  hoteldb:
+    image: postgres
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_DB=hotels
+      - PGDATA=/data/postgres
+    expose:
+      - "5432"
+    restart: unless-stopped
+    volumes:
+      - ./hoteldb:/data/postgres
+    networks:
+      - backend
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB" ]
+      interval: 5s
+      timeout: 5s
+      retries: 20
+
+
 volumes:
   postgres:
   userdb:
+  hoteldb:
 
 networks:
   backend:
