RSWW-56 fix application properties hostnames
Signed-off-by: Paweł Cichowski <pcichowski@pcichowski.com>

--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=discovery-service
 
-eureka.instance.hostname=localhost
+eureka.instance.hostname=discovery
 server.port=8010
 
 eureka.client.register-with-eureka=false
