RSWW-79 update application properties with correct values

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=api-gateway
 
-server.port=8086
-eureka.client.service-url.defaultZone=http://localhost:8010/eureka
+server.port=8082
+eureka.client.service-url.defaultZone=http://discovery:8010/eureka
 eureka.instance.prefer-ip-address=true
 
 spring.cloud.gateway.routes[0].id=hotel-service
