RSWW-101 update database connection in application.properties

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -9,12 +9,8 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 
 
 # H2 in-memory database - development
-spring.datasource.url=jdbc:h2:mem:userdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:user-db
 
 
 # Postgres database on Docker - production
