RSWW-105 fix queue constructor arguments mismatch
Signed-off-by: Paweł Cichowski <pcichowski@pcichowski.com>

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -7,6 +7,7 @@ eureka.client.service-url.defaultZone=http://discovery:8010/eureka
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
+spring.rabbitmq.host=rabbitmq
 
 # H2 in-memory database - development
 spring.h2.console.enabled=true
