--- a/transport-service/src/main/resources/application.properties
+++ b/transport-service/src/main/resources/application.properties
@@ -7,5 +7,7 @@ eureka.client.service-url.defaultZone=http://discovery:8010/eureka
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
+spring.rabbitmq.host=rabbitmq
+
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:transport-db
