--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -13,10 +13,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>user-service</name>
 	<description>user-service</description>
-	<properties>
-		<java.version>21</java.version>
-		<spring-cloud.version>2023.0.0</spring-cloud.version>
-	</properties>
+    <properties>
+        <java.version>21</java.version>
+        <spring-cloud.version>2023.0.0</spring-cloud.version>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
+    </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
