RSWW-138 set up websocket for transports updates

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -79,5 +79,14 @@ spring:
             - Path=/payments/**
           filters:
             - RemoveRequestHeader=Cookie
+        - id: data-generator
+          uri: lb://data-generator
+          predicates:
+            - Path=/data-generator/**
+          metadata:
+            cors:
+              allowedOrigins: '*'
+              allowedMethods: '*'
+              allowedHeaders: '*'
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
