RSWW-142: docker-compose-deploy.yml: add data generator
Signed-off-by: Paweł Cichowski <pcichowski@pcichowski.com>

--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -98,16 +98,16 @@ services:
     networks:
       - backend
 
-#  data-generator:
-#    image: ghcr.io/microarchitecturovisco/data-generator:latest
-#    depends_on:
-#      - rabbitmq
-#      - discovery
-#      - gateway
-#      - hotel
-#      - transport
-#    networks:
-#      - backend
+  data-generator:
+    image: ghcr.io/microarchitecturovisco/data-generator:latest
+    depends_on:
+      - rabbitmq
+      - discovery
+      - gateway
+      - hotel
+      - transport
+    networks:
+      - backend
 
 networks:
   backend:
